:art: fix h-scroll on mobile

--- a/_css/src/_base.scss
+++ b/_css/src/_base.scss
@@ -22,7 +22,7 @@
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
-html { font-size: 112.5%; }
+html { font-size: 112.5%; overflow-x: clip; }
 
 body {
   font-family: var(--font-body);
@@ -30,6 +30,7 @@ body {
   color: var(--text);
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
+  overflow-x: clip;
 }
 
 a { color: inherit; text-decoration: none; }
